# heart

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  HEART_PROJECT_VERIFICATION_MASTER_PLAN.md  Makefile  PHASE_0_COMPLETION_REPORT.md  QUICKSTART_LLM.md  QUICKSTART_LOCAL.md  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  「心屿」产品需求文档 v1.0（海外版）.md
backend/: ALEMBIC_QUICKSTART.md  Dockerfile  README.md  alembic.ini  integration_test_report.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration_v3.py  test_real_flow.py  test_real_scenarios.py  test_real_scenarios_v2.py  test_results.json
backend/docs/: LLM_GUIDE.md  QUICKSTART_LLM.md
backend/docs/perf/: 2026-05-27_baseline.md
backend/golden/voice_baselines/: rin_baseline.jsonl
backend/heart/: __init__.py
backend/heart/afdian/: fulfillment.py
backend/heart/api/: __init__.py  app.py  deps.py  main.py  rate_limit.py  routes.py  routes_account.py  routes_admin.py  routes_auth.py  routes_characters.py  routes_chat_ws.py  routes_credits.py  routes_invite.py  routes_membership.py  routes_proactive.py  routes_profile.py  routes_state.py  routes_story.py  routes_story_ws.py  routes_voice.py  routes_webhooks.py  wiring.py
backend/heart/billing/: __init__.py  pricing.py
backend/heart/core/: auth.py  base.py  config.py  safe_logger.py
backend/heart/demo_cli/: __init__.py  __main__.py  commands.py  renderer.py  session.py
backend/heart/infra/: README_COST_TRACKER.md  circuit_breaker.py  embeddings.py  event_bus.py  invariant_predicates.py  invariants.py  llm_cost_tracker.py  migration_check.py  partitions.py  session_manager.py  storage.py
backend/heart/invite/: service.py
backend/heart/membership/: __init__.py  service.py
backend/heart/observability/: __init__.py  turn_profiler.py
backend/heart/prompts/: __init__.py  episode_summary.py  memory_extraction.py
backend/heart/qa/: __init__.py  baseline_runner.py  drift_scorer.py  golden_loader.py  regression_runner.py  report_builder.py  voice_judge.py
backend/heart/replay/: __init__.py  __main__.py  bundle_dump.py  cli.py  diff_view.py  layer_view.py
backend/heart/safety/: __init__.py  care_path.py  critic_agent.py  safety_agent.py  safety_llm.py  wellbeing_monitor.py
backend/heart/scripts/: backfill_embeddings.py  cleanup_dirty_l4.py  dedupe_facts.py  extractor_diff_report.py  gen_redemption_codes.py  profile_demo.py  seed_demo.py
backend/heart/ss01_soul/: README.md  anchor_block.py  anchor_injector.py  anchor_mode_decider.py  anti_pattern_scanner.py  character_catalog.py  character_content.py  content_store.py  draft.py  drift_detector.py  drift_fingerprint.py  drift_llm_client.py  drift_score_fuser.py  facet_unlocker.py  persona_screen.py  registry.py  reload.py  resonance_tracker.py  schema_validator.py  spec_builder.py  spec_store.py
backend/heart/ss02_memory/: __init__.py  decay_engine.py  forgetting_affect.py  mode.py  models.py  predicate_vocab.py  promoter.py  reconstructor.py  service.py
backend/heart/ss03_emotion/: CONTAGION_MOODDRIFT_README.md  README.md  __init__.py  contagion.py  decay.py  models.py  mood_drift.py  repair.py  service.py  state_machine.py  trigger_detector.py
backend/heart/ss04_relationship/: __init__.py  anti_gaming.py  attachment_tracker.py  cold_war.py  models.py  reunion.py  service.py  signal_aggregator.py  special_states.py  stage_engine.py  trust_tracker.py
backend/heart/ss05_composer/: __init__.py  anti_drift_injector.py  anti_pattern_filter.py  composer.py  conflict_resolver.py  directive_compiler.py  example_usage.py  input_sanitizer.py  layer_aggregator.py  message_splitter.py  modality_adapter.py  reroll.py  service.py  streaming_anti_pattern.py  token_budget.py
backend/heart/ss06_inner_state/: __init__.py  activity_generator.py  anniversary_tracker.py  block_builder.py  composer.py  concerns_tracker.py  initiative_decider.py  inner_loop_worker.py  models.py  proactive_message.py  proactive_repo.py  ritual_manager.py  scheduler.py  service.py
backend/heart/ss07_orchestration/: __init__.py  circuit_breaker.py  director.py  middleware.py  models.py  orchestrator.py  safety_adapter.py  session_manager.py
backend/heart/ss08_voice/: errors.py  fish_provider.py  fish_realtime_provider.py  mimo_provider.py  minimax_provider.py  pooled_provider.py  provider.py  realtime_stream_session.py  reference_audio.py  sentence_splitter.py  service.py  stream_session.py  text_emotion.py  types.py  voice_cache.py  voice_catalog.py  voice_director.py  voice_message_session.py  voice_resolver.py
backend/heart/ss09_story/: __init__.py  models.py  prompt.py  repository.py  service.py
backend/heart/workers/: __init__.py  account_purge_worker.py  credit_reconciliation_worker.py  inner_loop_scheduler.py  memory_consolidator.py  memory_encoder.py  memory_extractor_worker.py  memory_promoter_worker.py  runner.py
backend/infra/kubernetes/: composer-service-deployment.yaml  emotion-service-deployment.yaml  inner-state-service-deployment.yaml  memory-service-deployment.yaml  orchestrator-deployment.yaml  relationship-service-deployment.yaml  soul-service-deployment.yaml
backend/migrations/: CONFIG_SUMMARY.md  MIGRATION_EXAMPLES.md  README.md  SETUP_GUIDE.md  env.py
backend/migrations/versions/: 001_add_memory_tables.py  002_add_emotion_rel.py  002_add_emotion_relationship_tables.py  003_ss04_threshold_tuning_v1_1.py  004_replay_snapshots.py  005_safety_events.py  006_sessions.py  007_memory_extractor_audit.py  008_memory_extraction_dlq.py  009_memory_l4_extras.py  010_memory_regex_shadow.py  011_users_and_auth.py  012_credits_and_redemption.py  014_chat_messages.py  (+34 more)
backend/scripts/: check_mvp.py  create_minimax_clone_voice.py  demo_anchor_block.py  demo_anchor_injector.py  demo_drift_detector.py  diag_voice_preset.py  e2e_llm_pipeline.py  import_scenarios.py  run_voice_drift.py  seed_builtin_clones.py  unify_scenario_formats.py  upload_scenario_covers.py  validate_soul_specs.py
backend/tests/: __init__.py  conftest.py
(+800 files in other folders)
