[project]
name = "heart"
version = "0.1.0"
description = "Heart AI Companion Backend"
requires-python = ">=3.11"
dependencies = [
    # API Framework — cap fastapi <0.137: 0.137 changed route registration in a
    # way incompatible with slowapi 0.1.10 (limiter-decorated routes silently
    # drop). Lift once slowapi supports fastapi>=0.137.
    "fastapi>=0.115.0,<0.137",
    "uvicorn[standard]>=0.30.0",

    # Rate limiting (used in heart/api/main.py + rate_limit.py)
    "slowapi>=0.1.9",

    # Database (greenlet required for SQLAlchemy async — not auto-pulled on all
    # platforms since sqlalchemy 2.0.24; explicit here to avoid runtime crash
    # in workers/inner_loop under uvicorn).
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",

    # Validation (pydantic[email] required for EmailStr fields in schemas)
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Redis
    "redis>=5.0.0",

    # LLM Clients
    "anthropic>=0.34.0",
    "openai>=1.0.0",

    # Embedding (self-hosted BGE-M3)
    "sentence-transformers>=2.2.0",

    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "structlog>=24.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",

    # Email (SMTP async client)
    "aiosmtplib>=3.0.0",

    # Object storage (S3 / MinIO / Cloudflare R2)
    "boto3>=1.34.0",

    # YAML Config
    "pyyaml>=6.0",

    # Pattern Matching
    "pyahocorasick>=2.0.0",

    # CLI / Demo
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "locust>=2.20.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "contract: Tier A contract tests — verify cross-subsystem interface contracts",
    "integration: Tier B integration tests — real PG/Redis with fake LLM",
    "live: Tier C live tests — real DeepSeek calls, cost-capped, skipped by default",
    "e2e: Tier E end-to-end tests — real uvicorn + real PG + Playwright APIRequestContext",
    "requires_postgres: tests that need a real Postgres backend",
    "drift: voice drift regression tests (Tier C subcategory)",
    "properties: property-based invariant tests (Hypothesis)",
]
addopts = "-m 'not live and not requires_postgres and not e2e'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = [
    "E501",    # line too long — handled by formatter
    "B008",    # FastAPI Depends() in function args is standard pattern
    "E402",    # module level import not at top — needed for sys.path hacks
    "E741",    # ambiguous variable name — not critical
    "N818",    # exception naming — not critical
    "F401",    # unused import — some are conditional/try imports
    "F402",    # import shadowed by loop var — not critical
    "B017",    # blind exception in tests — acceptable for test assertions
]

[tool.ruff.lint.per-file-ignores]
# Technical debt imported during ss03-07 consolidation (see #15).
# These functions exceed mccabe=10 and must be refactored before 2026-Q3.
# DO NOT add new entries here without a tracking issue.
"heart/ss04_relationship/stage_engine.py" = ["C901"]
"heart/ss04_relationship/signal_aggregator.py" = ["C901"]
"heart/ss04_relationship/service.py" = ["C901"]
"heart/ss04_relationship/special_states.py" = ["C901"]
"heart/safety/critic_agent.py" = ["C901"]
"heart/safety/wellbeing_monitor.py" = ["C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]
disable_error_code = [
    "no-any-return",
    "no-untyped-def",
    "var-annotated",
    "override",
    "assignment",
    "index",
    "misc",
    "operator",
]

# Technical debt imported during ss03-07 consolidation (see #15).
# These modules have mypy errors from source branches and must be fixed before 2026-Q3.
# DO NOT add new entries here without a tracking issue.
[[tool.mypy.overrides]]
module = [
    "heart.ss06_inner_state.ritual_manager",
    "heart.ss04_relationship.models",
    "heart.ss03_emotion.models",
    "heart.ss06_inner_state.block_builder",
    "heart.ss05_composer.token_budget",
    "heart.ss04_relationship.service",
    "heart.safety.safety_llm",
]
ignore_errors = true

[tool.coverage.run]
source = ["heart"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]